[package]
name = "b2_backblaze"
version = "0.1.9"
edition = "2021"

description = "this is a basic async library to upload small files to backblaze b2 service."
homepage = "https://github.com/gzbakku/b2_backblaze"
repository = "https://github.com/gzbakku/b2_backblaze"
readme = "README.md"
keywords = ["b2","backblaze","client","upload","api"]
categories = ["asynchronous", "api-bindings"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.12.5",features=["json"]}
tokio = { version = "1.38.1", features = ["full"] }
json = "0.12.4"

# base64 = "0.13.0"
base64 = "0.22.1"

new_mime_guess = "4.0.1"
sha1 = "0.10.6"
hex = "0.4.3"